--- a/mod-iamx/mod-iamx/index.html
+++ b/mod-iamx/mod-iamx/index.html
@@ -72,7 +72,7 @@
     <!-- About Section -->
     <section id="about" class="about-section section-padding">
       <div class="container">
-        <h2 class="section-title wow fadeInUp">John Doe</h2>
+        <h2 class="section-title wow fadeInUp">ALLESSANDRO DEL PIERO</h2>
 
         <div class="row">
 
