First commit of 02 CSS Review
See how git works

--- a/mod-iamx/mod-iamx/index.html
+++ b/mod-iamx/mod-iamx/index.html
@@ -72,20 +72,20 @@
     <!-- About Section -->
     <section id="about" class="about-section section-padding">
       <div class="container">
-        <h2 class="section-title wow fadeInUp">ALLESSANDRO DEL PIERO</h2>
+        <h2 class="section-title wow fadeInUp">Alexandru Iulian Maxim</h2>
 
         <div class="row">
 
           <div class="col-md-4 col-md-push-4">
             <div class="biography">
               <div class="myphoto">
-                <img src="assets/images/myphoto.jpg" alt="">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.worldfootball.net%2Fplayer_summary%2Falexandru-maxim_2%2F&psig=AOvVaw3UKx09gXZKkgO5YBq4YiYs&ust=1621069414972000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjl3ajoyPACFQAAAAAdAAAAABAD" alt="">
               </div>
               <ul>
-                <li><strong>Date of birth:</strong> 05 Dec 1993</li>
-                <li><strong>Nationality:</strong> American</li>
-                <li><strong>Height:</strong> 175</li>
-                <li><strong>Weight:</strong> 72</li>
+                <li><strong>Date of birth:</strong> 8 July 1990</li>
+                <li><strong>Nationality:</strong> Romanian</li>
+                <li><strong>Height:</strong> 179</li>
+                <li><strong>Weight:</strong> 70</li>
               </ul>
             </div>
           </div> <!-- col-md-4 -->
