First commit of 02 CSS Review
See how git works

--- a/mod-iamx/mod-iamx/index.html
+++ b/mod-iamx/mod-iamx/index.html
@@ -79,7 +79,7 @@
           <div class="col-md-4 col-md-push-4">
             <div class="biography">
               <div class="myphoto">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.worldfootball.net%2Fplayer_summary%2Falexandru-maxim_2%2F&psig=AOvVaw3UKx09gXZKkgO5YBq4YiYs&ust=1621069414972000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNjl3ajoyPACFQAAAAAdAAAAABAD" alt="">
+                <img src="assets/images/alexMax.jpg" alt="">
               </div>
               <ul>
                 <li><strong>Date of birth:</strong> 8 July 1990</li>
@@ -106,18 +106,18 @@
                         <ul class="timeline">
                             <li class="timeline-inverted">
                                 <div class="posted-date">
-                                  <span class="month">2011-2013</span>
+                                  <span class="month">2011</span>
                                 </div><!-- /posted-date -->
 
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Junior ui designer</h3>
-                                            <span>XYZ Design Home, One Street, Boston</span>
+                                            <h3>Pandurii Târgu Jiu</h3>
+                                            <span>On 9 August 2011</span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
+                                            <p>Maxim returned to Romania to sign a one-year contract with the option of another two years for Pandurii Târgu Jiu.</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div> <!-- /timeline-panel -->
@@ -125,18 +125,18 @@
 
                             <li>
                                 <div class="posted-date">
-                                  <span class="month">2013-2015</span>
+                                  <span class="month">2013</span>
                                 </div><!-- /posted-date -->
 
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Lead UX Consultant</h3>
-                                            <span>Lucky8 Designing Firm, California</span>
+                                            <h3>VfB Stuttgart</h3>
+                                            <span>On 31 January 2013</span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>Completely provide access to seamless manufactured products before functionalized synergy. Progressively redefine competitive.</p>
+                                            <p>Maxim joined German side VfB Stuttgart for a transfer fee of €1.5 million, signing a four-and-a-half-year contract.</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div><!-- /timeline-panel -->
@@ -152,54 +152,54 @@
     <!-- Skills Section -->
     <section id="skills" class="skills-section section-padding">
       <div class="container">
-        <h2 class="section-title wow fadeInUp">Skills</h2>
+        <h2 class="section-title wow fadeInUp">PACE</h2>
 
         <div class="row more-skill text-center">
           <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="91" data-color="e74c3c">
+              <div class="chart" data-percent="98" data-color="e74c3c">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>leadership</span>
+                      <span>SHOOTING</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="23" data-color="2ecc71">
+              <div class="chart" data-percent="30" data-color="2ecc71">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Creativity</span>
+                      <span>PASSING</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="58" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Management</span>
+                      <span>DRIBBLING</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="61" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Branding</span>
+                      <span>DEFENSE</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="59" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Marketing</span>
+                      <span>PHYSICAL</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="70" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Motivation</span>
+                      <span>ATTACKER</span>
                     </div>
                 </div>
             </div>
